src/objects/QB_Invoice__c.object
<CustomObject>
    <description>The QuickBooks invoices that were issued against sales order sent from Salesforce opportunities.</description>
    <fields>
        <fullName>Applied_Amount__c</fullName>
        <description>The amount applied to date against this invoice.</description>
        <formula>Total_Credit_Memos__c  +   Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount applied to date against this invoice.</inlineHelpText>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <description>The total amount of the invoice.</description>
        <inlineHelpText>The total amount of the invoice.</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>The date the invoice was created.</description>
        <inlineHelpText>The date the invoice was created.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <description>The memo field available in the QuickBooks invoice.</description>
        <inlineHelpText>The memo field available in the QuickBooks invoice.</inlineHelpText>
        <label>Memo</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <description>The name of the opportunity/sales order the invoice was issued against.</description>
        <inlineHelpText>The name of the opportunity/sales order the invoice was issued against.</inlineHelpText>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>QuickBooks Invoices</relationshipLabel>
        <relationshipName>R00N40000001rOomEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QB_Invoice_TXN_ID__c</fullName>
        <description>The internal ID of the invoice in QuickBooks.</description>
        <inlineHelpText>The internal ID of the invoice in QuickBooks.</inlineHelpText>
        <label>QuickBooks Invoice TXN ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <description>The remaining amount to be paid.</description>
        <formula>Invoice_Amount__c  -   Applied_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The remaining amount to be paid.</inlineHelpText>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Amount__c</fullName>
        <description>The total amount of the sales order this invoice applies to.</description>
        <inlineHelpText>The total amount of the sales order this invoice applies to.</inlineHelpText>
        <label>Sales Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <description>The sales order number of the sales order the invoice was issued against.</description>
        <inlineHelpText>The sales order number of the sales order the invoice was issued against.</inlineHelpText>
        <label>Sales Order Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <description>The amount of sales tax charged on the invoice.</description>
        <inlineHelpText>The amount of sales tax charged on the invoice.</inlineHelpText>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Memos__c</fullName>
        <description>The total of all credit memos for this invoice.</description>
        <inlineHelpText>The total of all credit memos for this invoice.  This is not displayed as it is used to compute applied amount and remaining balance.</inlineHelpText>
        <label>Total Credit Memos</label>
        <summarizedField>QB_Credit_Memo__c.Credit_Memo_Applied_Amount__c</summarizedField>
        <summaryForeignKey>QB_Credit_Memo__c.Invoice_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <description>The total of all payments against this invoice.</description>
        <inlineHelpText>The total of all payments against this invoice.  This is not displayed as it is used to compute applied amount and remaining balance.</inlineHelpText>
        <label>Total Payments</label>
        <summarizedField>QB_Payment__c.Payment_Applied_Amount__c</summarizedField>
        <summaryForeignKey>QB_Payment__c.Invoice_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>QuickBooks Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Invoice_Deletes</fullName>
        <active>false</active>
        <errorConditionFormula>IF( $User.Username  &lt;&gt; &quot;rj@jsa.org&quot;, true, false)</errorConditionFormula>
        <errorMessage>You cannot delete an invoice.</errorMessage>
    </validationRules>
</CustomObject>